Don't display hidden objectives